app/assets/stylesheets/pages/_sign_in.scss
.sign-in-page {
  background-image: image-url('sign-in-background.JPG');
  background-size: cover;
  background-position: 50% 46%;
}

#log-in-page {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 70vh;

  p, form {
    width: 25%;
    font-size: 1.2em;
    color: white;

    .password-log-in {
      display: flex;
      justify-content: space-between;
      height: 29.6px;
      border-bottom: 1px solid white;
      margin-bottom: 16px;

      input {
        border-bottom: none;
      }

      a {
        color: white;
        text-decoration: none;
        transition: font-weight 0.3s ease-in-out;

        &:hover {
          font-weight: bolder;
        }
      }
    }
  }

  input {
    background: none;
    border: none;
    border-bottom: 1px solid white;
    font-size: 1em;
    padding: 0;
    color: white;

    &:focus {
      outline: none;
      box-shadow: none;
    }
  }

  input::placeholder {
    color: white;
  }

  input:-webkit-autofill {
    background-color: transparent !important;
  }

  .form-actions {
    display: flex;
    justify-content: center;
  }

  .btn {
    background: none;
    border: 1px solid white;
    padding: 0 32px;
    font-size: 1em;
    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
    color: white;
    width: 100%;

    &:hover {
      background-color: black;
      border: 1px solid black;
      color: white;
    }
  }

  .sign-up-link {
    text-align: center;
    margin-top: 8px;

    a {
      color: white;

      &:hover {
        font-weight: bolder;
      }
    }
  }
}

@media (max-width: 768px) {
  .sign-in-page {
    background-size: 350%;
    background-position: 55% 52%;
  }

  #log-in-page {
    min-height: 70vh;

    p, form {
      width: 100%;
      padding: 0 16px;
      font-size: 1em;
    }

    input {
      margin-bottom: 24px;
      border-radius: 0;
    }

    .btn {
      margin-bottom: 0;
    }
  }
}

